2022-09-13 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/{system,double-int}.h:
	  Remove wrong/unneeded gmp use.

2022-09-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/tinibios.h,
	  device/lib/ds390/tinibios.c,
	  device/lib/ds400/tinibios.c:
	  Provide function prototypes for tinybios.

2022-09-11 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCsymt.c,
	  support/regression/cases/Makefile.in:
	  Handle types double and long double in checkTypeSanity.

2022-09-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  src/SDCCast.c,
	  support/regression/tests/bug-3481.c:
	  Fix part of bug #3481.

2022-09-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug #3480.

2022-09-08 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/libbacktrace/allocfail.sh:
	  Delete unused file.

2022-09-08 Felix Salfelder <felix AT salfelder.org>

	* device/lib/incl.mk:
	  Fix %.rel rules. Thanks to Job Bolle, see discussion/1865.

2022-09-08 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/Makefile.in:
	  avoid tm-preds.h cleanup once more.

2022-09-07 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCpeeph.c,
	  src/z80/peeph.def,
	  support/regression/tests/bug-3478.c:
	  Fix bug #3478.

2022-09-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3471.c:
	  Fix bug #3471.

2022-09-06 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/Makefile.in,
	  support/cpp/libbacktrace/Makefile.am:
	  Revisit don't clean no-longer autogenerated files.

2022-09-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCcse.c,
	  support/regression/tests/bug-3470.c:
	  Fix part of bug #3470.

2022-09-04 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
