@@ -15,7 +15,7 @@ va-arg-23.c from the execute part of the gcc torture tests.
 
 struct two { long x, y; };
 
-#if !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
+#if !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
 void foo(int a, int b, int c, int d, int e, struct two f, int g, ...)
 {
   va_list args;
@@ -31,7 +31,7 @@ void foo(int a, int b, int c, int d, int e, struct two f, int g, ...)
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
+#if !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
   struct two t = { 0, 0 };
   foo(0, 0, 0, 0, 0, t, 1, 2);
   return;
