@@ -1,3 +1,12 @@
+2022-09-13 Benedikt Freisen <b.freisen AT gmx.net>
+
+	* doc/sdccman.lyx,
+	  src/ds390/gen.c,
+	  support/regression/tests/gcc-torture-execute-strct-varg-1.c,
+	  support/regression/tests/gcc-torture-execute-va-arg-23.c,
+	  support/regression/tests/gcc-torture-execute-va-arg-4.c:
+	  struct / union parameters on the stack for ds390, copied from mcs51.
+
 2022-09-13 Felix Salfelder <felix AT salfelder.org>
 
 	* support/cpp/gcc/{system,double-int}.h:
